section about add

--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
       </div>
       <div id="main">
         <h1>John Anonim</h1>
-        <h2 id="h2">PhD in Physics</h2>
+        <h2 id="h2">Python Developer, PhD in Physics</h2>
         <button class="button">
           <a href="#contact">Reach out</a>
         </button>
@@ -48,6 +48,26 @@
         }
       }
     </script>
+  </section>
+
+  <section>
+    <div id="container-about">
+      <div>
+        <h3>Who I am?</h3>
+        <h2 id="about-me">ABOUT ME</h2>
+      </div>
+      <div class="container-about2">
+        <div>
+          <img class="img-1" src="5039684.jpg" alt="computer" />
+        </div>
+        <div>
+          <p class="p-background">
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Hic dolores nostrum deleniti architecto voluptates
+            quaerat quia quo velit obcaecati sit et fugit vitae consectetur id dicta expedita nam, illum explicabo!
+          </p>
+        </div>
+      </div>
+    </div>
   </section>
 </body>
 
